Made the cloud LLM provider a setting instead of detecting it from the key
Provider selection
- Added a Provider dropdown to the AI Services settings tab, above the API key. It lists the six supported cloud providers by brand name (Anthropic (Claude), OpenAI, Google (Gemini), xAI (Grok), DeepSeek, Mistral) and starts on a "Select a provider" placeholder.
- Stored the choice in a new nullable game_session.llmProvider column (migration 11002) and read it through SystemSession and LlmProviderResolver, which both the VEGA gateway factory and the analysis endpoint now use. The provider is no longer inferred from the API key's format, so a vendor changing its key format no longer breaks detection.
- Blocked Save, with a warning banner, while the cloud source is selected without a provider or without a key.
- Made switching away from the saved provider clear and unlock the key field for the new provider's key, and switching back restore the saved key. An install with a key but no stored provider keeps its key when the provider is picked.
- Counted a provider change as a brain change, so saving it restarts the brain like a key change does.
- Replaced the "Supported Cloud LLMs" banner (now redundant with the dropdown) with a single line saying the model is selected automatically for the provider, and removed its strings.

Upgrade path for existing installs
- Added LlmProviderUpgrade, a Java step run at app start right after the database is ready. When a key is stored and no provider is, it names the provider from the retired key patterns and saves it silently. It runs whether the local or the cloud model is active, so a commander who switches to cloud later still has a provider. A key that matches no pattern, or more than one, is left without a provider.
- Cut KeyDetector down to a silent, upgrade-only detectLegacyProvider() covering the six LLM providers, and marked it frozen. Removed its spoken "Multiple providers detected" message.

Missing provider handling
- Added Unsel